--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contact — www.promo.in</title>
-    <meta name="description" content="Start a project or book a discovery call." />
+    <title>Contact Western Raos LLC — Get Internet Services Today</title>
+    <meta name="description" content="Contact Western Raos LLC for fast internet, cable TV, and home phone service. Call 646-222-3915 or use our contact form." />
+    <meta name="theme-color" content="#ffffff" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            colors: { charcoal: '#0e0e0e', neon: '#0d6efd', cyan: '#00e5ff' },
+            colors: { charcoal: '#ffffff', neon: '#0066cc', cyan: '#00a8e8' },
             fontFamily: { sans: ['Manrope', 'system-ui', 'sans-serif'] },
-            boxShadow: { glow: '0 0 30px rgba(13,110,253,0.35)' }
+            boxShadow: { glow: '0 0 20px rgba(0,102,204,0.15)' }
           }
         }
       }
@@ -22,133 +23,201 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body class="bg-charcoal text-white font-sans antialiased">
-    <header class="sticky top-0 z-40 bg-charcoal/70 backdrop-blur border-b border-white/5">
+  <body class="bg-charcoal text-gray-900 font-sans antialiased">
+    <header class="sticky top-0 z-40 bg-white border-b border-gray-200">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
         <a href="index.html" class="flex items-center gap-3">
-          <img src="assets/images/logo-light.svg" alt="Promo" class="h-7" />
+          <h1 class="text-lg font-bold text-neon">Western Raos LLC</h1>
         </a>
-        <nav class="hidden md:flex items-center gap-8 text-sm text-white/80">
-          <a href="about.html" class="hover:text-white">About</a>
-          <a href="services.html" class="hover:text-white">Services</a>
-          <a href="portfolio.html" class="hover:text-white">Portfolio</a>
-          <a href="contact.html" class="text-white">Contact</a>
+        <nav class="hidden md:flex items-center gap-8 text-sm text-gray-700">
+          <a href="about.html" class="hover:text-neon">About</a>
+          <a href="services.html" class="hover:text-neon">Services</a>
+          <a href="portfolio.html" class="hover:text-neon">Coverage</a>
+          <a href="contact.html" class="text-neon font-semibold">Contact</a>
+          <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call: 646-222-3915</a>
         </nav>
       </div>
     </header>
 
     <main>
-      <section class="py-20 border-b border-white/5">
+      <section class="py-20 border-b border-gray-200 bg-blue-50">
         <div class="mx-auto max-w-3xl px-4">
-          <h1 class="text-4xl md:text-5xl font-extrabold">Let's talk</h1>
-          <p class="mt-4 text-white/70">Tell us about your goals. We'll follow up quickly.</p>
-          <form class="mt-10 grid gap-4" id="contact-form">
-            <div class="grid sm:grid-cols-2 gap-4">
-              <input required name="name" placeholder="Your name" class="px-3 py-3 rounded bg-white/5 border border-white/10" />
-              <input required type="email" name="email" placeholder="Email" class="px-3 py-3 rounded bg-white/5 border border-white/10" />
-            </div>
-            <input name="company" placeholder="Company" class="px-3 py-3 rounded bg-white/5 border border-white/10" />
-            <textarea required name="message" placeholder="Project details" rows="5" class="px-3 py-3 rounded bg-white/5 border border-white/10"></textarea>
-            <button class="px-6 py-3 bg-neon rounded-full text-white hover:shadow-glow w-max">Send</button>
-            <div id="contact-status" class="text-sm text-white/70"></div>
-          </form>
+          <h1 class="text-4xl md:text-5xl font-extrabold text-gray-900">Get in Touch</h1>
+          <p class="mt-4 text-gray-700 text-lg">Contact us today to learn about our internet services, ask questions, or get a quote.</p>
         </div>
       </section>
-      <section class="py-16">
-        <div class="mx-auto max-w-7xl px-4">
-          <div class="rounded-2xl bg-white/5 border border-white/10 p-6 flex items-center justify-between">
-            <div>
-              <div class="font-semibold">Prefer a quick call?</div>
-              <div class="text-white/60 text-sm">Speak with a strategist now.</div>
-            </div>
-            <a href="tel:+10000000000" class="px-5 py-2.5 rounded-full bg-neon text-white">Call</a>
+
+      <div class="py-20">
+        <div class="mx-auto max-w-7xl px-4 grid md:grid-cols-3 gap-8 mb-20">
+          <!-- Contact Info Cards -->
+          <div class="p-8 rounded-2xl bg-white border border-gray-300 text-center">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-phone"></i></div>
+            <h3 class="font-bold text-gray-900 text-lg">Call Us</h3>
+            <p class="mt-2 text-gray-700">
+              <a href="tel:6462223915" class="text-neon font-semibold hover:underline">646-222-3915</a>
+            </p>
+            <p class="text-sm text-gray-600 mt-2">Available 24/7 for your convenience</p>
+          </div>
+
+          <div class="p-8 rounded-2xl bg-white border border-gray-300 text-center">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-envelope"></i></div>
+            <h3 class="font-bold text-gray-900 text-lg">Email</h3>
+            <p class="mt-2 text-gray-700">
+              <a href="mailto:westernraosllc@gmail.com" class="text-neon font-semibold hover:underline">westernraosllc@gmail.com</a>
+            </p>
+            <p class="text-sm text-gray-600 mt-2">We'll respond within 24 hours</p>
+          </div>
+
+          <div class="p-8 rounded-2xl bg-white border border-gray-300 text-center">
+            <div class="text-neon text-4xl mb-4"><i class="fa-solid fa-clock"></i></div>
+            <h3 class="font-bold text-gray-900 text-lg">Support Hours</h3>
+            <p class="mt-2 text-gray-700">
+              <strong>24/7</strong>
+            </p>
+            <p class="text-sm text-gray-600 mt-2">Round-the-clock customer support</p>
+          </div>
+        </div>
+
+        <!-- Contact Form -->
+        <div class="mx-auto max-w-3xl px-4">
+          <div class="bg-white rounded-2xl border border-gray-300 p-8">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">Send us a Message</h2>
+            <form class="grid gap-4" id="contact-form">
+              <div class="grid sm:grid-cols-2 gap-4">
+                <input required name="name" placeholder="Your Name" class="px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-neon" />
+                <input required type="email" name="email" placeholder="Email Address" class="px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-neon" />
+              </div>
+              <input name="phone" placeholder="Phone Number" class="px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-neon" />
+              <input name="company" placeholder="Company/Organization" class="px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-neon" />
+              <textarea required name="message" placeholder="Your Message..." rows="6" class="px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-neon resize-none"></textarea>
+              <button type="submit" class="px-6 py-3 bg-neon text-white rounded-full hover:shadow-glow font-semibold">Send Message</button>
+              <div id="contact-status" class="text-sm"></div>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <!-- FAQ Section -->
+      <section class="py-20 border-t border-gray-200 bg-gray-50">
+        <div class="mx-auto max-w-4xl px-4">
+          <h2 class="text-3xl font-bold text-gray-900 text-center">Frequently Asked Questions</h2>
+          <div class="mt-12 space-y-4">
+            <details class="rounded-xl bg-white border border-gray-300 p-6 cursor-pointer">
+              <summary class="font-semibold text-gray-900 flex items-center justify-between">
+                How fast is your internet?
+                <span class="text-neon">+</span>
+              </summary>
+              <p class="mt-4 text-gray-700">Our high-speed internet offers speeds up to 940 Mbps, perfect for streaming, gaming, and professional work.</p>
+            </details>
+            <details class="rounded-xl bg-white border border-gray-300 p-6 cursor-pointer">
+              <summary class="font-semibold text-gray-900 flex items-center justify-between">
+                Are there any contracts?
+                <span class="text-neon">+</span>
+              </summary>
+              <p class="mt-4 text-gray-700">No! We offer flexible month-to-month plans with no long-term contracts required.</p>
+            </details>
+            <details class="rounded-xl bg-white border border-gray-300 p-6 cursor-pointer">
+              <summary class="font-semibold text-gray-900 flex items-center justify-between">
+                What areas do you serve?
+                <span class="text-neon">+</span>
+              </summary>
+              <p class="mt-4 text-gray-700">We serve 50+ towns and communities. Check our coverage areas page to see if service is available in your area.</p>
+            </details>
+            <details class="rounded-xl bg-white border border-gray-300 p-6 cursor-pointer">
+              <summary class="font-semibold text-gray-900 flex items-center justify-between">
+                How quickly can I get set up?
+                <span class="text-neon">+</span>
+              </summary>
+              <p class="mt-4 text-gray-700">We offer fast installation with professional technicians. Most customers are connected within 7-10 business days.</p>
+            </details>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA Section -->
+      <section class="py-20 border-t border-gray-200 bg-gradient-to-r from-neon to-blue-600">
+        <div class="mx-auto max-w-4xl px-4 text-center">
+          <h2 class="text-3xl font-bold text-white">Ready to Get Connected?</h2>
+          <p class="mt-4 text-white/90">Join thousands of happy customers enjoying fast, reliable internet.</p>
+          <div class="mt-8 flex flex-wrap justify-center gap-4">
+            <a href="tel:6462223915" class="px-6 py-3 bg-white text-neon rounded-full hover:shadow-lg font-bold text-lg">Call Now: 646-222-3915</a>
+            <a href="services.html" class="px-6 py-3 border-2 border-white text-white rounded-full hover:bg-white hover:text-neon font-semibold">View Services</a>
           </div>
         </div>
       </section>
     </main>
-     <!-- Footer -->
-     <footer class="border-t border-white/5 py-16">
+
+    <!-- Footer -->
+    <footer class="border-t border-gray-300 bg-gray-900 text-white py-16">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 grid md:grid-cols-4 gap-10">
         <div>
-          <img src="assets/images/logo-light.svg" alt="Promo" class="h-7 opacity-90" />
-          <p class="mt-4 text-white/60 text-sm">Futuristic digital solutions. Motion-first, conversion-focused.</p>
+          <h3 class="text-lg font-bold text-white">Western Raos LLC</h3>
+          <p class="mt-2 text-gray-300 text-sm">Authorized Internet Services Retailer. Fast, reliable broadband.</p>
         </div>
         <div>
-          <h4 class="font-semibold">Links</h4>
-          <ul class="mt-3 space-y-2 text-white/70 text-sm">
+          <h4 class="font-semibold">Quick Links</h4>
+          <ul class="mt-3 space-y-2 text-gray-400 text-sm">
             <li><a href="about.html" class="hover:text-white">About</a></li>
             <li><a href="services.html" class="hover:text-white">Services</a></li>
-            <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
+            <li><a href="portfolio.html" class="hover:text-white">Coverage</a></li>
             <li><a href="contact.html" class="hover:text-white">Contact</a></li>
           </ul>
         </div>
         <div>
           <h4 class="font-semibold">Services</h4>
-          <ul class="mt-3 space-y-2 text-white/70 text-sm">
-            <li>Marketing Websites</li>
-            <li>Product UI/UX</li>
-            <li>Brand Systems</li>
-            <li>Performance & SEO</li>
+          <ul class="mt-3 space-y-2 text-gray-400 text-sm">
+            <li>High-Speed Internet</li>
+            <li>Cable TV & Entertainment</li>
+            <li>Home Phone Service</li>
+            <li>Business Broadband</li>
           </ul>
         </div>
         <div>
           <h4 class="font-semibold">Contact</h4>
-          <ul class="mt-3 space-y-2 text-white/70 text-sm">
-            <li>hello@promo.example</li>
-            <li>+1 (000) 000-0000</li>
+          <ul class="mt-3 space-y-2 text-gray-300 text-sm">
+            <li><strong>Phone:</strong> <a href="tel:6462223915" class="hover:text-neon">646-222-3915</a></li>
+            <li><strong>Email:</strong> <a href="mailto:westernraosllc@gmail.com" class="hover:text-neon">westernraosllc@gmail.com</a></li>
           </ul>
-          <form class="mt-4 flex items-center gap-2">
-            <input type="email" placeholder="Email for updates" class="w-full px-3 py-2 rounded bg-white/5 border border-white/10 placeholder:text-white/40" />
-            <button class="px-4 py-2 rounded bg-neon text-white">Join</button>
-          </form>
-          <div class="mt-4 flex items-center gap-3 text-white/60">
-            <a href="#" class="hover:text-white"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="#" class="hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" class="hover:text-white"><i class="fa-brands fa-github"></i></a>
-          </div>
         </div>
       </div>
-      <div class="mt-12 text-center text-xs text-white/50">
+      <div class="mt-12 text-center text-xs text-gray-500 border-t border-gray-700 pt-8">
         <a href="privacy.html" class="hover:text-white">Privacy</a> •
         <a href="terms.html" class="hover:text-white">Terms</a> •
-        <span>© <span id="year"></span> www.promo.in</span>
+        <span>© <span id="year"></span> Western Raos LLC. All Rights Reserved.</span>
       </div>
     </footer>
 
     <!-- Back to top -->
-    <button id="backToTop" class="fixed bottom-6 right-6 z-40 hidden p-3 rounded-full bg-white/10 border border-white/10 hover:bg-white/20">
+    <button id="backToTop" class="fixed bottom-6 right-6 z-40 hidden p-3 rounded-full bg-neon text-white border border-neon hover:bg-blue-700">
       <i class="fa-solid fa-arrow-up"></i>
       <span class="sr-only">Back to top</span>
     </button>
 
-
     <div class="custom-cursor"></div>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.38/bundled/lenis.min.js"></script>
-    <script src="js/cursor.js" defer></script>
-    <script src="js/animations.js" defer></script>
-    <script src="js/main.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
       document.getElementById('contact-form').addEventListener('submit', async (e)=>{
         e.preventDefault();
         const form = e.currentTarget;
         const status = document.getElementById('contact-status');
         status.textContent = 'Sending...';
+        status.className = 'text-blue-600';
         const data = Object.fromEntries(new FormData(form));
         try {
-          // Replace with your endpoint
           await fetch('https://httpbin.org/post', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(data) });
-          status.textContent = 'Thanks! We\'ll get back to you soon.';
+          status.textContent = 'Thanks! We\'ll get back to you within 24 hours.';
+          status.className = 'text-green-600';
           form.reset();
         } catch (err) {
-          status.textContent = 'Something went wrong. Please try again later.';
+          status.textContent = 'Something went wrong. Please call us at 646-222-3915.';
+          status.className = 'text-red-600';
         }
       })
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+    <script src="js/cursor.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-  
 </html>
 
 
