--- a/privacy.html
+++ b/privacy.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Privacy Policy — www.promo.in</title>
-    <meta name="description" content="Privacy policy for www.promo.in." />
+    <title>Privacy Policy — Western Raos LLC</title>
+    <meta name="description" content="Privacy policy for Western Raos LLC internet services." />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            colors: { charcoal: '#0e0e0e', neon: '#0d6efd', cyan: '#00e5ff' },
+            colors: { charcoal: '#ffffff', neon: '#0066cc', cyan: '#00a8e8' },
             fontFamily: { sans: ['Manrope', 'system-ui', 'sans-serif'] },
-            boxShadow: { glow: '0 0 30px rgba(13,110,253,0.35)' }
+            boxShadow: { glow: '0 0 20px rgba(0,102,204,0.15)' }
           }
         }
       }
@@ -21,74 +21,70 @@
     <link rel="stylesheet" href="css/styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body class="bg-charcoal text-white font-sans antialiased">
+  <body class="bg-charcoal text-gray-900 font-sans antialiased">
+    <header class="sticky top-0 z-40 bg-white border-b border-gray-200">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
+        <a href="index.html" class="text-lg font-bold text-neon">Western Raos LLC</a>
+        <nav class="hidden md:flex items-center gap-8 text-sm text-gray-700">
+          <a href="about.html" class="hover:text-neon">About</a>
+          <a href="services.html" class="hover:text-neon">Services</a>
+          <a href="portfolio.html" class="hover:text-neon">Coverage</a>
+        </nav>
+      </div>
+    </header>
     <main class="mx-auto max-w-3xl px-4 py-16">
-      <h1 class="text-3xl font-bold">Privacy Policy</h1>
-      <p class="mt-4 text-white/70">We respect your privacy. This page outlines how we handle data.</p>
-      <h2 class="mt-8 font-semibold">Information We Collect</h2>
-      <p class="mt-2 text-white/70">Contact information you provide via forms and analytics data.</p>
-      <h2 class="mt-8 font-semibold">How We Use Information</h2>
-      <p class="mt-2 text-white/70">To respond to inquiries and improve our services.</p>
-      <h2 class="mt-8 font-semibold">Contact</h2>
-      <p class="mt-2 text-white/70">hello@promo.example</p>
+      <h1 class="text-4xl font-bold text-gray-900">Privacy Policy</h1>
+      <p class="mt-4 text-gray-700">Effective Date: 2024. Western Raos LLC respects your privacy.</p>
+      <h2 class="mt-8 text-xl font-bold text-gray-900">Information We Collect</h2>
+      <p class="mt-2 text-gray-700">We collect information you provide directly (name, email, phone, address) and usage data through our website.</p>
+      <h2 class="mt-8 text-xl font-bold text-gray-900">How We Use Your Information</h2>
+      <p class="mt-2 text-gray-700">To respond to service inquiries, process orders, provide customer support, and improve our services.</p>
+      <h2 class="mt-8 text-xl font-bold text-gray-900">Data Security</h2>
+      <p class="mt-2 text-gray-700">We implement industry-standard security measures to protect your personal information.</p>
+      <h2 class="mt-8 text-xl font-bold text-gray-900">Contact Us</h2>
+      <p class="mt-2 text-gray-700">
+        <a href="mailto:westernraosllc@gmail.com" class="text-neon font-semibold">westernraosllc@gmail.com</a> or <a href="tel:6462223915" class="text-neon font-semibold">646-222-3915</a>
+      </p>
     </main>
-  </body>
    <!-- Footer -->
-   <footer class="border-t border-white/5 py-16">
+   <footer class="border-t border-gray-300 bg-gray-900 text-white py-16 mt-20">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 grid md:grid-cols-4 gap-10">
       <div>
-        <img src="assets/images/logo-light.svg" alt="Promo" class="h-7 opacity-90" />
-        <p class="mt-4 text-white/60 text-sm">Futuristic digital solutions. Motion-first, conversion-focused.</p>
+        <h3 class="text-lg font-bold">Western Raos LLC</h3>
+        <p class="mt-2 text-gray-300 text-sm">Authorized Internet Services Retailer.</p>
       </div>
       <div>
         <h4 class="font-semibold">Links</h4>
-        <ul class="mt-3 space-y-2 text-white/70 text-sm">
+        <ul class="mt-3 space-y-2 text-gray-400 text-sm">
           <li><a href="about.html" class="hover:text-white">About</a></li>
           <li><a href="services.html" class="hover:text-white">Services</a></li>
-          <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
+          <li><a href="portfolio.html" class="hover:text-white">Coverage</a></li>
           <li><a href="contact.html" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
       <div>
-        <h4 class="font-semibold">Services</h4>
-        <ul class="mt-3 space-y-2 text-white/70 text-sm">
-          <li>Marketing Websites</li>
-          <li>Product UI/UX</li>
-          <li>Brand Systems</li>
-          <li>Performance & SEO</li>
+        <h4 class="font-semibold">Legal</h4>
+        <ul class="mt-3 space-y-2 text-gray-400 text-sm">
+          <li><a href="privacy.html" class="hover:text-white">Privacy</a></li>
+          <li><a href="terms.html" class="hover:text-white">Terms</a></li>
         </ul>
       </div>
       <div>
         <h4 class="font-semibold">Contact</h4>
-        <ul class="mt-3 space-y-2 text-white/70 text-sm">
-          <li>hello@promo.example</li>
-          <li>+1 (000) 000-0000</li>
+        <ul class="mt-3 space-y-2 text-gray-300 text-sm">
+          <li><a href="tel:6462223915" class="hover:text-neon">646-222-3915</a></li>
+          <li><a href="mailto:westernraosllc@gmail.com" class="hover:text-neon">westernraosllc@gmail.com</a></li>
         </ul>
-        <form class="mt-4 flex items-center gap-2">
-          <input type="email" placeholder="Email for updates" class="w-full px-3 py-2 rounded bg-white/5 border border-white/10 placeholder:text-white/40" />
-          <button class="px-4 py-2 rounded bg-neon text-white">Join</button>
-        </form>
-        <div class="mt-4 flex items-center gap-3 text-white/60">
-          <a href="#" class="hover:text-white"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="#" class="hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#" class="hover:text-white"><i class="fa-brands fa-github"></i></a>
-        </div>
       </div>
     </div>
-    <div class="mt-12 text-center text-xs text-white/50">
-      <a href="privacy.html" class="hover:text-white">Privacy</a> •
-      <a href="terms.html" class="hover:text-white">Terms</a> •
-      <span>© <span id="year"></span> www.promo.in</span>
+    <div class="mt-12 text-center text-xs text-gray-500 border-t border-gray-700 pt-8">
+      <span>© <span id="year"></span> Western Raos LLC. All Rights Reserved.</span>
     </div>
-  </footer>
-
-  <!-- Back to top -->
-  <button id="backToTop" class="fixed bottom-6 right-6 z-40 hidden p-3 rounded-full bg-white/10 border border-white/10 hover:bg-white/20">
-    <i class="fa-solid fa-arrow-up"></i>
-    <span class="sr-only">Back to top</span>
-  </button>
-
-  
-</html>
+   </footer>
+   <div class="custom-cursor"></div>
+   <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
+   <script src="js/cursor.js" defer></script>
+   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  </body>
 
 
