Update All Pages

--- a/terms.html
+++ b/terms.html
@@ -29,9 +29,24 @@
           <a href="about.html" class="hover:text-neon">About</a>
           <a href="services.html" class="hover:text-neon">Services</a>
           <a href="portfolio.html" class="hover:text-neon">Coverage</a>
+          <a href="contact.html" class="hover:text-neon">Contact</a>
         </nav>
+        <button class="md:hidden flex items-center justify-center px-4 py-2 rounded-lg border-2 border-neon text-neon hover:bg-neon hover:text-white transition-colors" id="mobile-menu-btn" aria-label="Toggle menu">
+          <i class="fa-solid fa-bars text-xl"></i>
+        </button>
       </div>
     </header>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden border-b border-gray-200 bg-white">
+      <div class="mx-auto max-w-7xl px-4 py-4 flex flex-col gap-3 text-gray-700">
+        <a href="about.html" class="hover:text-neon font-medium">About</a>
+        <a href="services.html" class="hover:text-neon font-medium">Services</a>
+        <a href="portfolio.html" class="hover:text-neon font-medium">Coverage</a>
+        <a href="contact.html" class="hover:text-neon font-medium">Contact</a>
+        <a href="tel:6462223915" class="text-neon font-semibold">6462223915</a>
+      </div>
+    </div>
     <main class="mx-auto max-w-3xl px-4 py-16">
       <h1 class="text-4xl font-bold text-gray-900">Terms of Service</h1>
       <p class="mt-4 text-gray-700">Effective Date: 2024. These terms govern your use of Western Raos LLC services.</p>
