--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,22 @@
           <a href="contact.html" class="hover:text-neon">Contact</a>
           <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call: 646-222-3915</a>
         </nav>
+        <button class="md:hidden flex items-center justify-center px-4 py-2 rounded-lg border-2 border-neon text-neon hover:bg-neon hover:text-white transition-colors" id="mobile-menu-btn" aria-label="Toggle menu">
+          <i class="fa-solid fa-bars text-xl"></i>
+        </button>
       </div>
     </header>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden border-b border-gray-200 bg-white">
+      <div class="mx-auto max-w-7xl px-4 py-4 flex flex-col gap-3 text-gray-700">
+        <a href="about.html" class="hover:text-neon font-medium">About</a>
+        <a href="services.html" class="hover:text-neon font-medium">Services</a>
+        <a href="portfolio.html" class="hover:text-neon font-medium">Coverage</a>
+        <a href="contact.html" class="hover:text-neon font-medium">Contact</a>
+        <a href="tel:6462223915" class="text-neon font-semibold">6462223915</a>
+      </div>
+    </div>
 
     <main>
       <section class="py-20 border-b border-gray-200 bg-blue-50">
@@ -46,27 +60,129 @@
         </div>
       </section>
       <section class="py-16">
-        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 grid sm:grid-cols-2 lg:grid-cols-3 gap-6" id="portfolio-grid">
-          <article class="p-4 rounded-2xl bg-white/5 border border-white/10" data-cat="web">
-            <div class="aspect-[4/3] rounded-xl bg-white/10 mb-3"></div>
-            <h3 class="font-semibold">SaaS Marketing</h3>
-          </article>
-          <article class="p-4 rounded-2xl bg-white/5 border border-white/10" data-cat="brand">
-            <div class="aspect-[4/3] rounded-xl bg-white/10 mb-3"></div>
-            <h3 class="font-semibold">Brand System</h3>
-          </article>
-          <article class="p-4 rounded-2xl bg-white/5 border border-white/10" data-cat="product">
-            <div class="aspect-[4/3] rounded-xl bg-white/10 mb-3"></div>
-            <h3 class="font-semibold">Product UI</h3>
-          </article>
-          <article class="p-4 rounded-2xl bg-white/5 border border-white/10" data-cat="web">
-            <div class="aspect-[4/3] rounded-xl bg-white/10 mb-3"></div>
-            <h3 class="font-semibold">Fintech Microsite</h3>
-          </article>
-          <article class="p-4 rounded-2xl bg-white/5 border border-white/10" data-cat="brand">
-            <div class="aspect-[4/3] rounded-xl bg-white/10 mb-3"></div>
-            <h3 class="font-semibold">Brand Refresh</h3>
-          </article>
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <h2 class="text-3xl font-bold text-gray-900 mb-12">Service Areas</h2>
+          <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- NYC Area -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">New York City</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">All Five Boroughs: Manhattan, Brooklyn, Queens, Bronx, Staten Island</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ High-Speed Fiber Available</li>
+                <li>✓ Fastest Installation Times</li>
+                <li>✓ 24/7 Local Support</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+
+            <!-- Long Island -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">Long Island</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">Nassau County & Suffolk County Communities</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ Cable & Fiber Options</li>
+                <li>✓ Competitive Pricing</li>
+                <li>✓ Professional Installation</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+
+            <!-- Westchester -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">Westchester County</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">30+ Towns & Communities Served</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ Business & Residential</li>
+                <li>✓ Dedicated Support Lines</li>
+                <li>✓ Bundle Discounts Available</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+
+            <!-- New Jersey -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">New Jersey</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">Northern & Central Jersey Coverage</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ Bergen & Hudson County</li>
+                <li>✓ Fast Activation</li>
+                <li>✓ No Hidden Fees</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+
+            <!-- Connecticut -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">Connecticut</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">Fairfield County & Greater Area</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ Residential & Business</li>
+                <li>✓ Premium Support Included</li>
+                <li>✓ Same-Day Quotes</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+
+            <!-- Rural & Satellite -->
+            <div class="p-6 rounded-2xl bg-white border border-gray-300 hover:shadow-lg transition">
+              <div class="flex items-center gap-3 mb-4">
+                <i class="fa-solid fa-location-dot text-neon text-2xl"></i>
+                <h3 class="text-xl font-bold text-gray-900">Rural & Remote</h3>
+              </div>
+              <p class="text-gray-700 text-sm mb-3">Satellite Internet for Underserved Areas</p>
+              <ul class="space-y-2 text-gray-700 text-sm">
+                <li>✓ Satellite Technology</li>
+                <li>✓ Nationwide Coverage</li>
+                <li>✓ Reliable Backup Option</li>
+              </ul>
+              <a href="tel:6462223915" class="mt-4 inline-block px-4 py-2 bg-neon text-white rounded-full text-sm hover:shadow-glow font-semibold">Check Availability</a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Coverage Statistics -->
+      <section class="py-16 bg-gray-50 border-t border-gray-200">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <h2 class="text-3xl font-bold text-gray-900 text-center mb-12">Why Our Coverage Matters</h2>
+          <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="text-center">
+              <div class="text-4xl font-bold text-neon mb-2">50+</div>
+              <p class="text-gray-700 font-semibold">Towns Served</p>
+              <p class="text-gray-600 text-sm mt-1">Across 5 states and growing</p>
+            </div>
+            <div class="text-center">
+              <div class="text-4xl font-bold text-neon mb-2">99%</div>
+              <p class="text-gray-700 font-semibold">Uptime Guarantee</p>
+              <p class="text-gray-600 text-sm mt-1">Reliable service 24/7</p>
+            </div>
+            <div class="text-center">
+              <div class="text-4xl font-bold text-neon mb-2">1M+</div>
+              <p class="text-gray-700 font-semibold">Residents Served</p>
+              <p class="text-gray-600 text-sm mt-1">Trust us for internet</p>
+            </div>
+            <div class="text-center">
+              <div class="text-4xl font-bold text-neon mb-2">7-10</div>
+              <p class="text-gray-700 font-semibold">Day Installation</p>
+              <p class="text-gray-600 text-sm mt-1">Fast professional setup</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="py-20 border-t border-gray-200 bg-gradient-to-r from-neon to-blue-600">
@@ -132,6 +248,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
     <script src="js/cursor.js" defer></script>
+    <script src="js/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
