--- a/services.html
+++ b/services.html
@@ -36,8 +36,22 @@
           <a href="contact.html" class="hover:text-neon">Contact</a>
           <a href="tel:6462223915" class="px-4 py-2 rounded-full bg-neon text-white hover:shadow-glow font-semibold">Call: 646-222-3915</a>
         </nav>
+        <button class="md:hidden flex items-center justify-center px-4 py-2 rounded-lg border-2 border-neon text-neon hover:bg-neon hover:text-white transition-colors" id="mobile-menu-btn" aria-label="Toggle menu">
+          <i class="fa-solid fa-bars text-xl"></i>
+        </button>
       </div>
     </header>
+
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden border-b border-gray-200 bg-white">
+      <div class="mx-auto max-w-7xl px-4 py-4 flex flex-col gap-3 text-gray-700">
+        <a href="about.html" class="hover:text-neon font-medium">About</a>
+        <a href="services.html" class="hover:text-neon font-medium">Services</a>
+        <a href="portfolio.html" class="hover:text-neon font-medium">Coverage</a>
+        <a href="contact.html" class="hover:text-neon font-medium">Contact</a>
+        <a href="tel:6462223915" class="text-neon font-semibold">6462223915</a>
+      </div>
+    </div>
 
     <main>
       <section class="py-20 border-b border-gray-200 bg-blue-50">
@@ -268,6 +282,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3/dist/gsap.min.js"></script>
     <script src="js/cursor.js" defer></script>
+    <script src="js/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
